force-app/main/default/objects/Brand__c/fields/GH_Global_Brnd_Concept_Code__c.field-meta.xml
<CustomField>
    <fullName>GH_Global_Brnd_Concept_Code__c</fullName>
    <label>GH Global Brnd Concept Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>