force-app/main/default/objects/Brand__c/fields/GH_Global_Brnd_Concept_Desc__c.field-meta.xml
<CustomField>
    <fullName>GH_Global_Brnd_Concept_Desc__c</fullName>
    <label>GH_Global Brnd Concept Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>