force-app/main/default/objects/Brand__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <formula>IF( Picture_ID__c==&apos;&apos;,&quot;&quot;,IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+ Picture_ID__c , &quot;&quot;,100,100))</formula>
    <label>Picture</label>
    <type>Text</type>
</CustomField>