force-app/main/default/objects/Brand__c/fields/Total_number_of_Sub_Brands__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_Sub_Brands__c</fullName>
    <label>Total number of Sub-Brands</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>